fix-bug delete room